--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,5 @@
 {
-  "Тестовый текст": "Тестовый текст",
-  "Язык": "English",
-  "Основная страница": "Основная страница",
-  "О сайте": "О сайте"
+  "Main page": "Основная страница",
+  "About page": "О сайте",
+  "Language": "English"
 }
