Non-existent routes. Loader for loading pages.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Main page": "Main page",
   "About page": "About page",
-  "Language": "Русский"
+  "Language": "Русский",
+  "Page not found": "Page not found"
 }
