--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "Main page": "Основная страница",
   "About page": "О сайте",
-  "Language": "English"
+  "Language": "English",
+  "Page not found": "Страница не найдена"
 }
