Error Boundary. React error handling.

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,7 @@
   "Main page": "Основная страница",
   "About page": "О сайте",
   "Language": "English",
-  "Page not found": "Страница не найдена"
+  "Page not found": "Страница не найдена",
+  "Reload page": "Перезагрузить страницу",
+  "Occurred error": "Произошла ошибка"
 }
