--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,7 @@
   "Main page": "Main page",
   "About page": "About page",
   "Language": "Русский",
-  "Page not found": "Page not found"
+  "Page not found": "Page not found",
+  "Reload page": "Reload page",
+  "Occurred error": "Occurred error"
 }
