React Testing Library. Component tests.

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
   "Language": "English",
   "Page not found": "Страница не найдена",
   "Reload page": "Перезагрузить страницу",
-  "Occurred error": "Произошла ошибка"
+  "Occurred error": "Произошла ошибка",
+  "Toggle": "Переключить"
 }
