--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "Language": "Русский",
   "Page not found": "Page not found",
   "Reload page": "Reload page",
-  "Occurred error": "Occurred error"
+  "Occurred error": "Occurred error",
+  "Toggle": "Toggle"
 }
